--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -20,3 +20,9 @@ mask less
 	var texture = new PIXI.RenderTexture();
 	texture.render(myContainer);
 	var background = new PIXI.Sprite(texture);
+
+
+	网
+	音视频同步
+	摆位
+	主播耳机屏蔽
