--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -17,9 +17,14 @@ bracket name fit width
 [o]比分面板M3换皮
 修改比分
 总决赛title
+打印p1 -p20 对应名字
+pokerSp
+上下展开
+扑克 抽一个展示一个 序列帧
+
 gameIdx 胜者组 败者组
 
-扑克 抽一个展示一个 序列帧
+球员数据 写死rankingData
 
 
 	网
