--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -10,14 +10,15 @@ mask less
 
 
 ##final
-bracket zoom in pan
-bracket name fit width
+[0]bracket zoom in pan
+[0]bracket name fit width
 参赛宣言check location
 [o]获取球员列表 对应p1 p20
 [o]比分面板M3换皮
-修改比分
+[o]修改比分
 总决赛title
 打印p1 -p20 对应名字
+本地球员头像
 pokerSp
 上下展开
 扑克 抽一个展示一个 序列帧
