--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -24,8 +24,11 @@ mask less
 [o]incoming pos fix ,group bg .
 [o]安云鹏处理
 [o]remap bracket order
-实力榜截图
+[o]实力榜截图
 线上抽奖，本地面板RKB3
+
+9：30 中圈投篮 剩八人 28场之后
+决赛前 线上抽奖
 -----
 本地球员头像
 上下展开
