--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -17,9 +17,12 @@ mask less
 
 RKB3胜者组 败者组
 
-9：30 中圈投篮 剩八人 28场之后
-决赛前 线上抽奖
------
+自由赛程RKB4
+跑马灯
+
+多图双败赛程
+冠军赛 预告 对位 候选排名，剩余城市
+---                                                                                                                                                                        --
 本地球员头像
 上下展开
 [o]gameIdx 胜者组 败者组
