--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -16,9 +16,15 @@ mask less
 都输给过谁【list】 捞起
 
 RKB3胜者组 败者组
+·凉亭
+··自由赛程RKB4（自定义球员）
+··八强单淘
 
-自由赛程RKB4
+·金赏
 跑马灯
+
+胜败组只显示轮次
+获胜显示下一场
 
 多图双败赛程
 冠军赛 预告 对位 候选排名，剩余城市
