--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -20,8 +20,15 @@ option 选项1 或者2
 
 ----------
 ----测试
-1自动开题 ，开直播间
-2比赛全流程
+1 封盘，自动开题 ，开直播间
+2 比赛全流程
+3 写死实力榜
+[   ]4 route 62
+5 获胜 金钱数字 动画
+6 进程focus
+7 叠三成名字描边
+8 冠军title
+数字字体切字
 ----
 冠军冲脸抽卡ssr
 
