--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -26,10 +26,11 @@ option 选项1 或者2
 [   ]4 route 62
 5 获胜 金钱数字 动画
 6 进程focus
-7 叠三成名字描边
+[   ]7 叠三成名字描边
 8 冠军title
 9 右上角天猫搜索交替凌士
 10 3球胜改 输即淘汰
+11 媒体支持面板
 ----
 冠军冲脸抽卡ssr
 
