--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -23,17 +23,18 @@ option 选项1 或者2
 1 封盘，自动开题 ，开直播间
 2 比赛全流程
 3 写死实力榜
-[   ]4 route 62
-5 获胜 金钱数字 动画
-[   ]进程focus
-[   ]7 叠三成名字描边
 8 冠军title
+5 获胜 金钱数字 动画
 9 右上角天猫搜索交替凌士
 10 3球胜改 输即淘汰
 11 媒体支持面板
-进程group标序号，8强标序号
-直播间桌子挡板
+进程group标序号
 切换场景广告更换logo
+直播间桌子挡板
+[   ]4 route 62
+[   ]进程focus
+[   ]7 叠三成名字描边
+[   ]8强标序号
 ----
 冠军冲脸抽卡ssr
 
