--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -21,24 +21,24 @@ option 选项1 或者2
 ----------
 ----测试
 1 封盘，自动开题 ，开直播间
-2 比赛全流程
+2 比赛全流程,跑马灯
 3 写死实力榜
 8 冠军title
 5 获胜 金钱数字 动画
 9 右上角天猫搜索交替凌士
 10 3球胜改 输即淘汰
-11 媒体支持面板
-进程group标序号
 切换场景广告更换logo
 直播间桌子挡板
+[   ]11 媒体支持面板
+[   ]进程group标序号
 [   ]4 route 62
 [   ]进程focus
 [   ]7 叠三成名字描边
 [   ]8强标序号
+凉亭 8强单败
 ----
 冠军冲脸抽卡ssr
 
-罗斯活动 动态输入球员数据
 
 冠军排序
 都输给过谁【list】 捞起
@@ -54,7 +54,6 @@ RKB3胜者组 败者组
 胜败组只显示轮次
 获胜显示下一场
 
-多图双败赛程
 冠军赛 预告 对位 候选排名，剩余城市
 ---                                                                                                                                                                        --
 本地球员头像
