--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -20,13 +20,19 @@ option 选项1 或者2
 
 ----------
 ----测试
+dist 
+static 
+web.db
+rank.db
+comp1 _m4
+
 2 比赛全流程,跑马灯
-3 写死实力榜
 8 冠军title
-5 获胜 金钱数字 动画
 9 右上角天猫搜索交替凌士
 10 3球胜改 输即淘汰
 直播间桌子挡板
+[   ]5 获胜 金钱数字 动画
+[   ]3 写死实力榜
 [   ]1 封盘，自动开题（延时） ，开直播间
 [   ]切换场景广告更换logo
 [   ]11 媒体支持面板
@@ -35,6 +41,7 @@ option 选项1 或者2
 [   ]进程focus
 [   ]7 叠三成名字描边
 [   ]8强标序号
+实力榜规则 交手记录操作 整理给产品
 凉亭 8强单败
 ----
 冠军冲脸抽卡ssr
