--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -26,11 +26,12 @@ web.db
 rank.db
 comp1 _m4
 
-2 比赛全流程,跑马灯
 8 冠军title
 9 右上角天猫搜索交替凌士
 10 3球胜改 输即淘汰
 直播间桌子挡板
+[   ]前四奖金 跑马灯
+[   ]2 比赛全流程,跑马灯
 [   ]5 获胜 金钱数字 动画
 [   ]3 写死实力榜
 [   ]1 封盘，自动开题（延时） ，开直播间
@@ -41,6 +42,7 @@ comp1 _m4
 [   ]进程focus
 [   ]7 叠三成名字描边
 [   ]8强标序号
+提交比赛 =》上一场球员下一场对阵
 实力榜规则 交手记录操作 整理给产品
 凉亭 8强单败
 ----
