--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -7,18 +7,17 @@ OCT
 21 16人双败
 
 [   ]比分面板 实名主 id副
-剩余去战团
-冠军赛奖金 fix
 
 8 冠军title
-9 右上角天猫搜索交替凌士
-10 3球胜改 输即淘汰
 直播间桌子挡板
-提交比赛 =》上一场球员下一场对阵
-凉亭 8强单败
+
 
 实力榜 参赛第二次显示排行
 面板 区分冠军球员
+
+M5
+晋级图 
+冠军赛奖金 fix 分组赛 胜 2000  ，最后一场算胜败者组奖金
 ----
 冠军冲脸抽卡ssr
 
