--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -1,33 +1,58 @@
 
 OCT
-女篮数据
-14号 凉亭数据 自由
-创建比赛rec
 
-21 16人双败
+[   ]18号 抽签对阵 分组赛check
 
-[   ]比分面板 实名主 id副
+20 广东女篮
+
+[   ]特步 乔丹 转场 
+[   ]文件传
+21 特步：
+
+头盔		4
+平常心		1754
+宋教练		6874
+唐日辉		1703
+方良超		44
+烧烤哥		949
+安云鹏		1213
+打铁		1176			
+大N			2849
+李思舞		2660
+泡椒		2095
+失落的六号	4218
+刘宇9号	3715
+鬼手林坤	1945
+
+
+实力 小果冻 1015 朗佐鲍尔
+
+
+[   ]fix victory game title
+
+
 
 8 冠军title
 直播间桌子挡板
 
 
 实力榜 参赛第二次显示排行
+
+
 面板 区分冠军球员
 
 M5
-晋级图 
-冠军赛奖金 fix 分组赛 胜 2000  ，最后一场算胜败者组奖金
+排行 19010 乐风振宇 73 ，3367 卡麦鹏扬 151
+当场球员前后晋级图 
+[  ]冠军赛奖金 fix 分组赛 胜 2000 
+开题doc clear
+比分面板 实名主 id副
+排名更新到RKB3
+
+前三奖金图
 ----
 冠军冲脸抽卡ssr
 
-
-冠军排序
-
-RKB3胜者组 败者组
-·凉亭
-··自由赛程RKB4（自定义球员）
-··八强单淘
 
 
 ---                                                                                                                                                                        --
