--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -42,16 +42,22 @@ OCT
 面板 区分冠军球员
 
 M5
+1-62 走一遍
+进球后显示金钱特效
+[  ]晋级图fade in 特效
+[  ]比分 实名+id 获胜 实名 ,进球之后显示钱
+开题 封盘 延时
 排行 19010 乐风振宇 73 ，3367 卡麦鹏扬 151
-当场球员前后晋级图 
+[  ]当场球员前后晋级图 
 [  ]冠军赛奖金 fix 分组赛 胜 2000 
-开题doc clear
-比分面板 实名主 id副
+[  ]开题doc clear
 排名更新到RKB3
 
-前三奖金图
+[  ]前三奖金图
 ----
+NOV  女神转场，直播间装修
 冠军冲脸抽卡ssr
+
 
 
 
