--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -43,11 +43,11 @@ OCT
 
 M5
 1-62 走一遍
-进球后显示金钱特效
+进球后显示金钱3秒
 [  ]晋级图fade in 特效
 [  ]比分 实名+id 获胜 实名 ,进球之后显示钱
 开题 封盘 延时
-排行 19010 乐风振宇 73 ，3367 卡麦鹏扬 151
+[  ]排行 19010 乐风振宇 73 ，3367 卡麦鹏扬 151
 [  ]当场球员前后晋级图 
 [  ]冠军赛奖金 fix 分组赛 胜 2000 
 [  ]开题doc clear
