--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -53,9 +53,17 @@ M5
 [  ]开题doc clear
 排名更新到RKB3
 
-[  ]前三奖金图
+M6
+1-62 走一遍
+前三奖金图
+决赛 5犯变黄
+提交比赛之后查看上一场晋级图
+
+哑铃 桌子 电脑电源
 ----
+
 NOV  女神转场，直播间装修
+城市赛 面板粉色
 冠军冲脸抽卡ssr
 
 
