--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -58,8 +58,15 @@ M6
 前三奖金图
 决赛 5犯变黄
 提交比赛之后查看上一场晋级图
+魔王角色动画
+直播间 弹幕截屏界面场景
+跑马灯 各种logo 转场 公告 抽奖
+冠军赛已进入球员 积分可能排名
+xx倒计时 剩余
+[ ]现场比分显示器 页面
 
 哑铃 桌子 电脑电源
+
 ----
 
 NOV  女神转场，直播间装修
