--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -54,6 +54,8 @@ M5
 排名更新到RKB3
 
 M6
+20号 gameTitle 获胜界面 手动添加球员 城市赛面板 八强
+平常心建模
 1-62 走一遍
 前三奖金图
 决赛 5犯变黄
@@ -64,7 +66,6 @@ M6
 冠军赛已进入球员 积分可能排名
 xx倒计时 剩余
 [ ]现场比分显示器 页面
-
 哑铃 桌子 电脑电源
 
 ----
