--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -54,10 +54,17 @@ M5
 排名更新到RKB3
 
 M6
+[   ]实力榜数据更新
+[   ]比分面板hupu ID 适配超长
+[   ]鲍勃头像
+前三奖金图(奖金dump 头像下载)
+外滩时间戳 logo 上海 时间
+获胜文本  double kill triple quadra penta hexa hepta octa nona ，Crowned champion， combo x 1 2 3 4 5 6 7 8
+球员数据战绩 介绍文本 实力榜
 20号 gameTitle 获胜界面 手动添加球员 城市赛面板 八强
+广州 实验场
 平常心建模
 1-62 走一遍
-前三奖金图
 决赛 5犯变黄
 提交比赛之后查看上一场晋级图
 魔王角色动画
@@ -65,10 +72,12 @@ M6
 跑马灯 各种logo 转场 公告 抽奖
 冠军赛已进入球员 积分可能排名
 xx倒计时 剩余
-[ ]现场比分显示器 页面
+[   ]现场比分显示器 页面
 哑铃 桌子 电脑电源
 
 ----
+M7
+赛中实力榜
 
 NOV  女神转场，直播间装修
 城市赛 面板粉色
