--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -59,7 +59,7 @@ M6
 [   ]鲍勃头像
 前三奖金图(奖金dump 头像下载)
 外滩时间戳 logo 上海 时间
-获胜文本  double kill triple quadra penta hexa hepta octa nona ，Crowned champion， combo x 1 2 3 4 5 6 7 8
+获胜文本  double kill triple quadra penta hexa hepta octa ，Crowned(全胜) 其他连胜+ champion， combo x 1 2 3 4 5 6 7 8 giant-killing 
 球员数据战绩 介绍文本 实力榜
 20号 gameTitle 获胜界面 手动添加球员 城市赛面板 八强
 广州 实验场
