--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -58,7 +58,7 @@ M6
 [   ]比分面板hupu ID 适配超长
 [   ]鲍勃头像
 前三奖金图(奖金dump 头像下载)
-第二天改6人ranking
+[   ]第二天改6人ranking rankMap[20375] 变mapkey
 外滩时间戳 logo 上海 时间
 [   ]获胜文本  double kill triple quadra penta hexa hepta octa ，Crowned(全胜) 其他连胜+ champion， combo x 1 2 3 4 5 6 7 8 giant-killing 
 球员数据战绩 介绍文本 实力榜
