--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -58,8 +58,8 @@ M6
 [   ]比分面板hupu ID 适配超长
 [   ]鲍勃头像
 前三奖金图(奖金dump 头像下载)
+上海2 时间
 [   ]第二天改6人ranking rankMap[20375] 变mapkey
-外滩时间戳 logo 上海 时间
 [   ]获胜文本  double kill triple quadra penta hexa hepta octa ，Crowned(全胜) 其他连胜+ champion， combo x 1 2 3 4 5 6 7 8 giant-killing 
 球员数据战绩 介绍文本 实力榜
 20号 gameTitle 获胜界面 手动添加球员 城市赛面板 八强
@@ -78,8 +78,15 @@ xx倒计时 剩余
 
 ----
 M7
-赛中实力榜
+RKB4 广州球员数据 路人甲乙丙丁
+飞利浦转场广告 周五
+RKB3 下克上
+点餐
+排行
+段位图标 app对应
 
+赛中实力榜
+新开面板自动重置场次bug
 NOV  女神转场，直播间装修
 城市赛 面板粉色
 冠军冲脸抽卡ssr
