--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -78,10 +78,14 @@ xx倒计时 剩余
 
 ----
 M7
-RKB4 广州球员数据 路人甲乙丙丁
-飞利浦转场广告 周五
-RKB3 下克上
-点餐
+[  ]RKB4 广州球员数据 路人甲乙丙丁
+[  ]飞利浦转场广告 周五
+【 】24分组图 3x8
+【】game title 第几组第几场
+
+RKB3 下克上 victory realname
+led  比分时间 犯规
+double kill 声音
 排行
 段位图标 app对应
 
@@ -90,8 +94,10 @@ RKB3 下克上
 NOV  女神转场，直播间装修
 城市赛 面板粉色
 冠军冲脸抽卡ssr
-
-
+26抽签
+F2
+赛中团队信息，剩余人 血量 战绩 kda
+个人kda排行
 
 
 ---                                                                                                                                                                        --
