--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -103,6 +103,9 @@ NOV  女神转场，直播间装修
 F2
 赛中团队信息，剩余人 血量 战绩 kda
 个人kda排行
+5v5对阵出场
+
+本地头像
 
 
 ---                                                                                                                                                                        --
