--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -104,9 +104,22 @@ F2
 赛中团队信息，剩余人 血量 战绩 kda
 个人kda排行
 5v5对阵出场
-
+3x3 排版
+赛程表
 本地头像
+FAQ:
+3血啥时候给出
 
+开题测试
+赛程测试
+
+
+
+
+
+绘：
+花纹背景 顶光 透明面板
+高光影 球员原画
 
 ---                                                                                                                                                                        --
 本地球员头像
