--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -101,12 +101,14 @@ NOV  女神转场，直播间装修
 
 
 F2
-赛中团队信息，剩余人 血量 战绩 kda
-个人kda排行
-5v5对阵出场
-3x3 排版
 赛程表
+个人kda排行
+3x3 排版
+bd新背景
+赛中团队信息，剩余人 血量 战绩 kda
+5v5对阵出场
 本地头像
+获胜
 FAQ:
 3血啥时候给出
 
