--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -101,7 +101,7 @@ NOV  女神转场，直播间装修
 
 
 F2
-改血操作input
+[ ]改血操作input
 赛程表
 个人kda排行
 3x3 排版
@@ -111,7 +111,6 @@ bd新背景 毒
 本地头像
 获胜
 FAQ:
-3血啥时候给出
 
 老外名字测试
 开题测试
