--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -102,10 +102,12 @@ NOV  女神转场，直播间装修
 
 F2
 [ ]改血操作input
+改血只显示当前队伍血量
 赛程表
 个人kda排行
 3x3 排版
 bd新背景 毒
+
 赛中团队信息，剩余人 血量 战绩 kda
 5v5对阵出场
 本地头像
@@ -115,6 +117,7 @@ FAQ:
 老外名字测试
 开题测试
 赛程测试
+图片预加载
 
 
 
