--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -106,13 +106,23 @@ F2
 赛程表
 个人kda排行
 3x3 排版
+赛中团队信息，剩余人 血量 战绩 kda
 bd新背景 毒
 
-赛中团队信息，剩余人 血量 战绩 kda
+胜利手势
+
+暂停显示
+即将开始倒计时
+胜利结算 三血标识
+
+
+
 5v5对阵出场
 本地头像
 获胜
 FAQ:
+12345 对应队伍
+老外名字简化
 
 老外名字测试
 开题测试
