--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -106,7 +106,7 @@ F2
 改血只显示当前队伍血量
 赛程表
 个人kda排行
-3x3 排版
+[ ]3x3 排版
 赛中团队信息，剩余人 血量 战绩 kda
 bd新背景 毒
 
@@ -124,13 +124,15 @@ bd新背景 毒
 本地头像
 获胜
 FAQ:
-12345 对应队伍
-老外名字简化
+【】12345 对应队伍
 
+老外名字简化
 老外名字测试
 开题测试
 赛程测试
 图片预加载
+操作：
+3v3之前设定一场0：0的比赛 复位比分
 
 
 
