--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -102,14 +102,16 @@ NOV  女神转场，直播间装修
 
 F2
 [ ]改血操作input
-比分面板显示队名
+[ ]比分面板显示队名
 改血只显示当前队伍血量
 赛程表
 个人kda排行
 [ ]3x3 排版
+身高体重
 赛中团队信息，剩余人 血量 战绩 kda
 bd新背景 毒
-
+已结束gamelist 过滤
+团队血条
 
 胜利手势
 
@@ -126,13 +128,13 @@ bd新背景 毒
 FAQ:
 【】12345 对应队伍
 
-老外名字简化
-老外名字测试
-开题测试
+【】老外名字测试
+【】开题测试
 赛程测试
 图片预加载
 操作：
 3v3之前设定一场0：0的比赛 复位比分
+胜利一方scoreArr 11.1 小数点x.1为胜
 
 
 
