--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -103,20 +103,23 @@ NOV  女神转场，直播间装修
 F2
 [ ]改血操作input
 [ ]比分面板显示队名
-改血只显示当前队伍血量
 赛程表
-个人kda排行
+final data initBlood 复位血量
+bd新背景 毒
+
+改血只显示当前队伍血量
+已结束gamelist 过滤
+即将开始倒计时
+
 [ ]3x3 排版
 身高体重
-赛中团队信息，剩余人 血量 战绩 kda
-bd新背景 毒
-已结束gamelist 过滤
 团队血条
+个人kda排行
+赛中团队信息，剩余人 血量 战绩 kda
 
 胜利手势
 
 【】暂停显示
-即将开始倒计时
 胜利结算 三血标识
 *本场获取的技能图标
 
