--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -103,10 +103,12 @@ NOV  女神转场，直播间装修
 F2
 [ ]改血操作input
 [ ]比分面板显示队名
-赛程表
-final data initBlood 复位血量
+[ ]赛程表
+[ ]final data initBlood 复位血量
 bd新背景 毒
-
+[ ]3v3 去掉 logo去掉 6个字队名。online bg
+[ ]/api/final_game/match_receive
+ bonus 不满三次灰色
 改血只显示当前队伍血量
 已结束gamelist 过滤
 即将开始倒计时
@@ -126,17 +128,17 @@ bd新背景 毒
 
 
 5v5对阵出场
-本地头像
+【】本地头像
 获胜
 FAQ:
 【】12345 对应队伍
-
 【】老外名字测试
 【】开题测试
 赛程测试
 图片预加载
 操作：
 3v3之前设定一场0：0的比赛 复位比分
+2K day0 名字 "0 0"创建3v3比赛
 胜利一方scoreArr 11.1 小数点x.1为胜
 
 
