--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -1,4 +1,24 @@
 
+S4 
+3.17 BO3-11
+
+【】score 奖金
+媒体合作面板
+奖金数额15晚确定 出图 
+获胜奖金 出四张+配合定妆照
+倒计时
+【】52517、卤蛋vs黄鹏峰（球迷众筹奖金=27856元）
+[ ] 总比分
+A2 in zheng gliss
+A2 yuan yan chord
+byl 乐器
+
+【】卤蛋头像
+获胜面板奖金
+【】1vs1大头
+
+3.23 精英
+八强bracket 切换
 OCT
 
 [   ]18号 抽签对阵 分组赛check
@@ -8,6 +28,7 @@ OCT
 [   ]特步 乔丹 转场 
 [   ]文件传
 21 特步：
+
 
 头盔		4
 平常心		1754
