--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -1,4 +1,64 @@
 
+4.2 
+[]小组赛在后台操作 
+[]字体预加载 
+[]公告预览
+小组名字长度限制 标签
+3.30 小组增加热门 标记 通用公告
+3.29 公告 小组 更新 用夺冠热门风格
+
+C1 xiao*xiao*
+B2 violin exp
+Q2
+
+增加更多直播中的图文内容，丰富用户观看体验。
+节目效果品质提升，从而增加用户观看时长的可能性。
+
+个人工作目标：
+1、（20天）回放管理系统开发（数据场次命名、obs python 改媒体源路径）
+目前的回放功能，只能回放最近的一个视频，在挑选当前对局中的最精彩镜头有很大限制。
+如：球员进的第一个球是扣篮，终结比赛进球是简单上篮。
+当前的回放系统如果回放扣篮的话，上篮的回放视频是无法被记录的。
+回放管理系统 目的是解决此类问题。
+--1、记录所有进球
+--2、可预览可挑选 
+--3、（*）配合APP端上传本场精彩集锦回放
+2、（*）本场精彩集锦回放（10秒短视频） APP端，直播内引导点击 xxx精彩进球X3。短视频点击
+
+3、直播面板设计 绘制 开发、动画制作。
+--1、（12天）夺冠热门球员，详细信息介绍面板。给观众预期，球员出场场次预告面板
+	如：张智扬还有30秒到达战场）。 
+--赛后效果
+--2、（3-5天一个）回放进球特效，球员定制化出场特效。如：鹅皇三分特效，进球冰火闪电 
+--3、（10天）虚拟直播间更新，现场到直播间转场动画 
+--4、（5天）实力榜直播中展示 
+
+4、导播工具开发，流程整合
+--1、（3天）动画视频序列化整理，包括进球特效，广告动画，主播介绍动画。
+--2、（3天）导播线上控制台开发整合
+
+5、（*）粉丝观看（贡献）排行榜
+
+可数据化指标：
+各项工作内容的完成时间
+平均观看时长 20分钟
+（*）观众点击短视频时间、次数
+
+问题点：
+作为产品来看，直播内容（视频流）对于区分新老用户体验无法兼顾。
+主播如果知道当前点进来的用是全新用户，就会引导用户使用APP的互动功能。
+如：发弹幕、攒人品等。
+但是对于老用户来说这些就是冗余的体验。
+
+..
+直播间镜头图片、广告、动画播放管理系统
+虚拟直播间 精英赛 城市赛区分
+新公告
+实力榜直播展示面板
+回放进球特效
+
+广告主转场动画
+增加可看内容
 S4 
 3.17 BO3-11
 
@@ -9,16 +69,31 @@ S4
 倒计时
 【】52517、卤蛋vs黄鹏峰（球迷众筹奖金=27856元）
 [ ] 总比分
+
+z 姐 pv重置
 A2 in zheng gliss
 A2 yuan yan chord
-byl 乐器
+changcheng miku
+sakura scale rotation pan =>stage
 
 【】卤蛋头像
 获胜面板奖金
 【】1vs1大头
 
 3.23 精英
-八强bracket 切换
+【】八强bracket 换肤 小组皮肤框
+*切换
+[]完赛冠军title
+实力榜
+[]获胜面板
+winner fade out
+logo fx
+live desktop update
+
+foul def 0
+game title 糊
+
+
 OCT
 
 [   ]18号 抽签对阵 分组赛check
