--- a/src/views/panel/todo
+++ b/src/views/panel/todo
@@ -1,9 +1,53 @@
+[may 8]
+脉动转场
+实力榜
+logo爆炸粒子 fx particles builder
+摇瓶子
+角标轮播
+
+
+
+脉动 粒子动画
+replay 线框
+身高体重字体变大点
+赛况预制
+RKB3  两位数分数scale
+logo 反面 报名小程序
+小组净胜球 改净胜分
+导出对阵gfx
+五组对阵（精英） 票数 淘汰
+动态头像 黄蓝筐 定位 持球
+主播名牌 studio panel
+播视频即将开始
+
+
+[]title字段
+[ ]winner score panel 同时
+obs播视频接口
+独立小组透明列表（知道八强）
+四强排名，八强 六强
+
+新直播间背景
+logo转场
+rmop 默认不显示比分
+通用排行榜 实力  压冠 学历
+foul hint
+超长名字截掉
+4.5
+4.4
+【】对齐vs title
+【】top5 gen
+【】rmop
+
+4.3 
+[]泽男盼盼
+[]小组名字长度限制
 
 4.2 
 []小组赛在后台操作 
 []字体预加载 
 []公告预览
-小组名字长度限制 标签
+ 标签
 3.30 小组增加热门 标记 通用公告
 3.29 公告 小组 更新 用夺冠热门风格
 
